<resources>
    <string name="name">name</string>
    <string name="description">Description:</string>
    <string name="descriptionText">DescriptionText</string>
    <string name="company">Company:</string>
    <string name="companyText">CompanyText</string>
    <string name="country">Country:</string>
    <string name="countryText">countryText</string>
    <string name="success_rate">Success Rate:</string>
    <string name="successRate">successRate</string>
    <string name="wikipedia">Wikipedia</string>
    <string name="Name">name</string>
    <string name="first_flight">First Flight:</string>
    <string name="cost">Cost:</string>
    <string name="_0">0</string>
    <string name="zero">0</string>
    <string name="app_name">RocketsApp</string>

</resources>